--- a/assets/templates/alliance/works-page.html
+++ b/assets/templates/alliance/works-page.html
@@ -22,9 +22,9 @@
         <div class="row">          
           <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-md-offset-2 col-lg-offset-2">
             <ul class="nav nav-justified nav-menu">
-              <li><a href="#">ГЛАВНАЯ</a></li>
-              <li><a href="#">НАША&nbsp;КОМАНДА</a></li>
-              <li><a href="#">ПОРТФОЛИО</a></li>
+              <li><a href="index.html">ГЛАВНАЯ</a></li>
+              <li><a href="team-page.html">НАША&nbsp;КОМАНДА</a></li>
+              <li><a href="works-page.html">ПОРТФОЛИО</a></li>
               <li><a href="#">КАТАЛОГ&nbsp;ТОВАРОВ</a></li>
             </ul>
           </div>
