--- a/assets/templates/activebox/index.html
+++ b/assets/templates/activebox/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8" />
 
-	<title>Adaptive website. Part 3</title>
+	<title>ActiveBOX</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
