--- a/assets/templates/barber-shop/css/style.css
+++ b/assets/templates/barber-shop/css/style.css
@@ -780,6 +780,7 @@ body {
 
 .modal-content-map-show {
     display: block;
+    animation: bounce 0.6s;
 }
 
 .modal-overlay {
@@ -799,4 +800,12 @@ body {
 
 .modal-content-show {
     display: block;
+    animation: bounce 0.6s;
+}
+
+@keyframes bounce {
+    0% { transform: translateY(-2000px); }
+    70% { transform: translateY(30px); }
+    90% { transform: translateY(-10px); }
+    100% { transform: translateY(0); }
 }
