--- a/assets/templates/barber-shop/index.html
+++ b/assets/templates/barber-shop/index.html
@@ -1,143 +1,198 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Барбершоп "Бородинский"</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Барбершоп «Бородинский»</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body>
-    <header class="main-header">
-      <div class="container clearfix">
-        <nav class="main-navigation">
-          <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="template/price.html">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </nav>
-        <div class="user-block">
-          <a class="login" href="#">Вход</a>
-        </div>
+    <header class="page-header">
+      <div class="page-header__logo">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-desktop.png">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.png">
+          <img src="img/logo-mobile.png" alt="Барбершоп «Бородинский»" width="226" height="30">
+        </picture>
       </div>
+      <nav class="main-nav  main-nav--closed  main-nav--nojs">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__items">
+            <li class="main-nav__item  main-nav__item--active"><a>Главная</a></li>
+            <li class="main-nav__item"><a href="work.html">Наши работы</a></li>
+            <li class="main-nav__item"><a href="form.html">Записаться</a></li>
+            <li class="main-nav__item"><a href="">Контакты</a></li>
+          </ul>
+          <ul class="main-nav__user-items">
+            <li class="main-nav__user-item"><a class="main-nav__user-login" href="">Войти</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
-    <main class="container">
-      <div class="index-logo">
-        <img src="img/BORODINSKI%20Logo.png" width="368" height="204" alt="Бородинский">
-      </div>
-      <section class="features clearfix">
-        <div class="features-item">
-          <b class="features-name">Быстро</b>
-          <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>
-        </div>
-        <div class="features-item">
-          <b class="features-name">Круто</b>
-          <p>Забудьте, как вы стришлись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
-        </div>
-        <div class="features-item">
-          <b class="features-name">Дорого</b>
-          <p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
-        </div>
+    <main>
+      <section class="stats">
+        <header class="stats__header">
+          <b class="stats__slogan">Стрижка у нас<br> это выгодно!</b>
+          <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
+          <small class="stats__legend stats__legend--top"><sup>*</sup> — приведенные данные ложь</small>
+        </header>
+        <section class="stats__items">
+            <div class="stats__row">
+              <div class="stats__cell  stats__value">1 500<sup>*</sup></div>
+              <div class="stats__cell  stats__field">рублей<br> вложений</div>
+            </div>
+            <div class="stats__row">
+              <div class="stats__cell  stats__value">7 200</div>
+              <div class="stats__cell  stats__field">секунд<br> времени мастера</div>
+            </div>
+            <div class="stats__row">
+              <div class="stats__cell  stats__value">90 000</div>
+              <div class="stats__cell  stats__field">постриженных<br> волос</div>
+            </div>
+            <div class="stats__row">
+              <div class="stats__cell  stats__value">500 000<sup>*</sup></div>
+              <div class="stats__cell  stats__field">лайков и<br> комплиментов</div>
+            </div>
+        </section>
+        <small class="stats__legend stats__legend--bottom"><sup>*</sup> — приведенные данные ложь</small>
       </section>
-      <div class="index-content clearfix">
-        <div class="index-content-left">
-          <h2 class="index-content-title">Новости</h2>
-          <ul class="news-preview">
-            <li>
-              <p>Нам наконец завезли Ягермейстер! Теперь вы можете пропустить стаканчик во время стрижки</p>
-              <time datetime="2017-01-11">11 января</time>
+      <section class="advantages">
+        <div class="advantages__wrapper  slider">
+          <input class="slider__input" type="radio" name="advantages" id="advantages-input-1" checked>
+          <input class="slider__input" type="radio" name="advantages" id="advantages-input-2">
+          <input class="slider__input" type="radio" name="advantages" id="advantages-input-3">
+          <ul class="advantages__items">
+            <li class="advantages__item  advantages__item--fast  slider__item">
+              <h3 class="advantages__item-title">Быстро</h3>
+              <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки</p>
             </li>
-            <li>
-                <p>В нашей команде пополнение, Борис "Бритва" стригунец, обладатель множества титулов и наград пополнил наши стройные ряды</p>
-                <time datetime="2017-01-18">18 января</time>
+            <li class="advantages__item  advantages__item--cool  slider__item">
+              <h3 class="advantages__item-title">Круто</h3>
+              <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино. Во всяком случае внешне.</p>
+            </li>
+            <li class="advantages__item  advantages__item--expensive  slider__item">
+              <h3 class="advantages__item-title">Дорого</h3>
+              <p>Наши мастера — профессионалы своего делаи не могут стоить дёшево. К тому же, разве цена не даёт определённый статус?</p>
             </li>
           </ul>
-          <a class="btn" href="#">Все новости</a>
-        </div>
-        <div class="index-content-right">
-          <h2 class="index-content-title">Фотогалерея</h2>
-          <div class="gallery">
-            <figure class="gallery-content">
-              <img src="img/slider.png" width="286" height="164" alt="">
-            </figure>
-            <button class="btn gallery-prev">Назад</button>
-            <button class="btn gallery-next">Вперед</button>
+          <div class="advantages__toggles slider__toggles">
+            <label class="slider__toggle" for="advantages-input-1">1</label>
+            <label class="slider__toggle" for="advantages-input-2">2</label>
+            <label class="slider__toggle" for="advantages-input-3">3</label>
           </div>
         </div>
-      </div>
-      <div class="index-content clearfix">
-        <div class="index-content-left">
-          <h2 class="index-content-title">Контактная информация</h2>
-          <p>
-            Барбершоп "Бородинский"<br>
-            Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-            Телефон: +7 (812) 666-02-66
-          </p>
-          <p>
-            Время работы:<br>
-            пн - пт: с 10:00 до 22:00<br>
-            сб - вс: с 10:00 до 19:00
-          </p>
-          <a class="btn js-open-map" href="#">Как проехать</a>
-          <a class="btn" href="#">Обратная звязь</a>
+      </section>
+      <section class="news">
+        <div class="news__wrapper">
+          <h2 class="news__title">Новости и акции</h2>
+          <ul class="news__items">
+            <li class="news__item">
+              <a class="news__link" href=""></a>
+              <time class="news__date" datetime="2015-09-29"><b>29</b><br> сент</time>
+              <p>Нам наконец завезли Ягермайстер! Теперь вы можете пропусить стаканчик во время стрижки.</p>
+            </li>
+            <li class="news__item">
+              <a class="news__link" href=""></a>
+              <time class="news__date" datetime="2015-09-19"><b>19</b><br> сент</time>
+              <p>В нашей команде пополнение, Борис «Бритва» Стригунец, пополнил наши стройные ряды. Спешите записаться!</p>
+            </li>
+            <li class="news__item">
+              <a class="news__link" href=""></a>
+              <time class="news__date" datetime="2015-09-09"><b>9</b><br> сент</time>
+              <p>Все дорожает, а наши стрижки нет! Как так? Приходите, постригитесь и узнаете, в чем здесь подвох!</p>
+            </li>
+          </ul>
+          <a class="news__to-all  btn" href="">Показать все</a>
         </div>
-        <div class="index-content-right">
-          <h2 class="index-content-title">Записаться</h2>
-          <p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-          <form class="appointment-form" action="" method="post">
-            <input type="text" name="date" value="" placeholder="Дата">
-            <input type="text" name="time" value="" placeholder="Время">
-            <input type="text" name="name" value="" placeholder="Ваше имя">
-            <input type="tel" name="phone" value="" placeholder="Телефон">
-            <button class="btn" type="submit">Отправить</button>
-          </form>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrapper  slider">
+          <h2 class="reviews__title">Отзывы о нас</h2>
+          <a class="reviews__write  btn" href="">Оставить свой</a>
+          <input class="slider__input" type="radio" name="reviews" id="reviews-input-1" checked>
+          <input class="slider__input" type="radio" name="reviews" id="reviews-input-2">
+          <input class="slider__input" type="radio" name="reviews" id="reviews-input-3">
+          <div class="reviews__items">
+            <blockquote class="reviews__item  reviews__item--1  slider__item">
+              <div class="reviews__author-foto">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/reviews-tra-d.jpg">
+                  <source media="(min-width: 768px)" srcset="img/reviews-tra-t.jpg">
+                  <img src="img/reviews-tra-m.jpg" alt="Фото Трэвиса Баркера" width="50" height="33">
+                </picture>
+              </div>
+              <cite class="reviews__author-name">Трэвис Баркер</cite>
+              <p>Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </blockquote>
+            <blockquote class="reviews__item  reviews__item--2  slider__item">
+              <div class="reviews__author-foto">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/reviews-tra-d.jpg">
+                  <source media="(min-width: 768px)" srcset="img/reviews-tra-t.jpg">
+                  <img src="img/reviews-tra-m.jpg" alt="Фото Трэвиса Баркера" width="50" height="33">
+                </picture>
+              </div>
+              <cite class="reviews__author-name">Саша Мальцев</cite>
+              <p>Попросил омолодить и омолодили! Кто теперь скажет, что мне 45?</p>
+            </blockquote>
+            <blockquote class="reviews__item  reviews__item--3  slider__item">
+              <div class="reviews__author-foto">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="img/reviews-tra-d.jpg">
+                  <source media="(min-width: 768px)" srcset="img/reviews-tra-t.jpg">
+                  <img src="img/reviews-tra-m.jpg" alt="Фото Трэвиса Баркера" width="50" height="33">
+                </picture>
+              </div>
+              <cite class="reviews__author-name">Винстон Синий</cite>
+              <p>Как только заростаю и волосы начинают мешать видеть — бегом в Бородинский!</p>
+            </blockquote>
+            <button class="reviews__btn  reviews__prev" type="button">Предыдущий отзыв</button>
+            <button class="reviews__btn  reviews__next" type="button">Следующий отзыв</button>
+          </div>
+          <div class="reviews__toggles  slider__toggles">
+            <label class="slider__toggle" for="reviews-input-1">1</label>
+            <label class="slider__toggle" for="reviews-input-2">2</label>
+            <label class="slider__toggle" for="reviews-input-3">3</label>
+          </div>
         </div>
-      </div>
+      </section>
     </main>
-    <footer class="main-footer clearfix">
-      <div class="container">
-        <section class="footer-contacts">
-          Барбершоп "Бородинский"<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#" class="find-us">Как нас найти?</a><br>
-          Телефон: +7 (812) 666-02-66
-        </section>
-        <section class="footer-social">
-          <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">вк</a>
-          <a class="social-btn social-btn-fb" href="#">фб</a>
-          <a class="social-btn social-btn-inst" href="#">инст</a>
-        </section>
-        <section class="footer-copyright">
-           <p>Разработано</p>
-           <a class="btn" href="#">Revo Inc &copy; 2017</a>
-        </section>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <div class="page-footer__contacts">
+          <b>Барбершоп «Бородинский»</b>
+          <p>г. Санкт-Петербург, ул. Большая Конюшенная 19/8</p>
+          <a href="tel:+78125556666"><span class="page-footer__contacts-hidden">Тел.:</span> +7 (812) 555-66-66</a>
+        </div>
+        <div class="page-footer__social">
+          <div class="social-links">
+            <p>Давайте дружить!</p>
+            <a class="social-link  social-link--vk" href="">Мы в Вконтакте</a>
+            <a class="social-link  social-link--fb" href="">Мы в Фейсбуке</a>
+            <a class="social-link  social-link--in" href="">Мы в Инстаграме</a>
+          </div>
+        </div>
+        <div class="page-footer__copyright">
+          <p>Разработано:</p>
+          <a class="btn  page-footer__copyright-link" href="https://vk.com/revch" target="_blank">Max Sharing</a>
+        </div>
       </div>
     </footer>
-    <div class="modal-content">
-        <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-        <h2 class="modal-content-title">Личный кабинет</h2>
-        <p>Введите свой логин и пароль</p>
-        <form class="login-form" action="" method="post">
-            <input class="icon-user" type="text" name="login" placeholder="Логин">
-            <input class="icon-password" type="password" name="password" placeholder="Пароль">
-            <label class="login-checkbox">
-                <input type="checkbox" name="remember">
-                <span class="checkbox-indicator"></span>
-                Запомнить меня
-            </label>
-            <a href="#" class="restore">Забыл пароль</a>
-            <button class="btn" type="submit">Войти</button>
-        </form>
-    </div>
-    <div class="modal-content-map">
-        <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-        <div id="yandex-map"></div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651595!2d30.320894616394252!3d59.93879418187624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0YHQuNGPLCAxOTExODY!5e0!3m2!1sru!2sua!4v1491665616018" width="766" height="561" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div class="modal-overlay"></div>
-    <script src="js/main.js"></script>
+    <section class="modal-login">
+      <h2>Личный кабинет</h2>
+      <p>Введите свой логин и пароль, чтобы войти</p>
+      <form class="form  modal-login__form" action="index.html" method="post">
+        <input class="modal-login__user" type="text" name="login" placeholder="Логин">
+        <input class="modal-login__password" type="password" name="password" placeholder="Пароль">
+        <label class="modal-login__remember"><input type="checkbox" name="remember"><span class="checkbox-indicator"></span>Запомните меня</label>
+        <a class="modal-login__restore" href="">Я забыл пароль!</a>
+        <button class="form__btn  modal-login__enter  btn" type="submit" name="button">Войти <span class="modal-login__text-hidden">в личный кабинет<span></button>
+        <button class="modal-login__closed  btn" type="button" name="button">Закрыть</button>
+      </form>
+    </section>
+    <script src="js/script.js"></script>
   </body>
 </html>
