--- a/assets/templates/device/index.html
+++ b/assets/templates/device/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <a class="main-header-logo"><span class="visually-hidden">DEVICE</span></a>
       <div class="header-top-link">
-        <form class="header-form-search" action="https://echo.htmlacademy.ru" method="get">
+        <form class="header-form-search" action="" method="get">
           <input type="search" name="search-field" placeholder="Поиск по сайту">
           <input type="submit" value="Найти">
         </form>
