--- a/assets/templates/test/css/style.css
+++ b/assets/templates/test/css/style.css
@@ -235,8 +235,9 @@ body {
 
 /*Пятая секция*/
 .graph {
-  min-height: 800px;
+  min-height: 1000px;
   background: url("../img/graph.png") no-repeat center;
+  background-size: contain; 
 }
 /*Шестая секция*/
 .coin__flex-container {
