--- a/assets/templates/test/index.html
+++ b/assets/templates/test/index.html
@@ -96,7 +96,11 @@
       </div>
     </div>
   </section>
-  <section class="graph"></section>
+  <section class="graph">
+    <div class="container">
+      <img src="img/graph.png" alt="" width="1400" height="650">
+    </div>
+  </section>
   <section class="coin">
     <div class="container">
       <div class="coin__flex-container">
